# baseplate

client/: Cargo.toml
client/src/: conn.rs  main.rs
docs/: handshake.tex  main.tex  references.bib  timeline.tex
server/: Cargo.toml
server/src/: main.rs  session.rs
shared/: Cargo.toml
shared/src/: future.rs  handshake.rs  lib.rs  logging.rs  packet.rs  proto.rs  state.rs
