[package]
name = "client"
version = "0.1.0"
authors = ["Sami Kukkonen <sami.m.kukkonen@helsinki.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
shared = { path = "../shared" }
crossbeam = "0.7.2"
bytes = "0.4.12"
bincode = "1.2.0"
