[package]
name = "server"
version = "0.1.0"
authors = ["Sami Kukkonen <sami@samikukkonen.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
env_logger = "0.7.0"
fern = "0.5.8"
chrono = "0.4.9"
shared = { path = "../shared" }
bytes = "0.4.12"
crossbeam = "0.7.2"
