[package]
name = "server"
version = "0.1.0"
authors = ["Sami Kukkonen <sami@samikukkonen.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
env_logger = "0.7.0"
chrono = "0.4.9"
shared = { path = "../shared" }
bytes = "0.4.12"
crossbeam = "0.7.2"
bincode = "1.2.0"
rand = "0.7.2"
async-std = "0.99.9"

[dependencies.futures-preview]
version = "0.3.0-alpha.19"
features = ["async-await"]
