[package]
name = "shared"
version = "0.1.0"
authors = ["Sami Kukkonen <sami@samikukkonen.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
crc = "1.8.1"
bytes = "0.4.12"
chrono = { version = "0.4.9", features = ["serde"] }
pretty-hex = "0.1.1"
paste = "0.1.6"
snafu = "0.5.0"
bincode = "1.2.0"
serde = "1.0.101"
serde_derive = "1.0.101"
fern = { version = "0.5.8", features = ["colored"] }
